commit updates to match latest transform tree